# qdldl-python

./: setup.py
c/: CMakeLists.txt
c/amd/include/: SuiteSparse_config.h  amd_internal.h  perm.h
cpp/: qdldl.hpp
